[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycradlewise"
version = "0.2.0"
description = "Async Python client for the Cradlewise Smart Crib API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jon Lamendola"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "pycognito>=2024.5.1",
    "boto3>=1.34.0",
    "aiohttp>=3.9.0",
    "awsiotsdk>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aioresponses"]

[project.urls]
Homepage = "https://github.com/jlamendo/pycradlewise"
Repository = "https://github.com/jlamendo/pycradlewise"
Issues = "https://github.com/jlamendo/pycradlewise/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
